<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:hint="Estado">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/st_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingTop="10dp"
            android:text="@string/st_save" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="@string/st_name"
            android:scrollbars="vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="@string/st_lastname"
            android:scrollbars="vertical"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/st_creditcard"
            android:padding="14dp"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/st_month"
                android:padding="14dp"
                android:scrollbars="vertical"/>

            <EditText
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:hint="@string/st_year"
                android:padding="14dp"
                android:scrollbars="vertical"/>

            <EditText
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:hint="@string/st_cod"
                android:padding="14dp"
                android:scrollbars="vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:text="@string/st_direc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/st_streetnumber"
                android:padding="14dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:hint="@string/st_city" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:hint="@string/st_status"
                android:padding="14dp" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:hint="@string/st_codpos"
                android:padding="14dp" />



        </LinearLayout>















    </LinearLayout>

</LinearLayout>


